Adding Gradle to Mood service.
Needed the tests fixing and some cleanup around the demo code.